$Id$


v0.61.4		11-Aug-2004

	upgrade:
		If you have BBBS uplinks and use automatic uplink requests then
		change the setup of these nodes in screen 7.10.
		Run "mbfile check" and then "mbfile index". This fixes the
		thumbnails if supported by your system.

	libnodelist.a:
		Removed some debug logging.

	mbcico:
		Removed a little debug logging.

	mbfido:
		No help was displayed when no valid command was given.
		Echomail for non-existing areas now finally is stored in the
		badmail area.
		Echomail received from not connected nodes is stored in the
		badmail area unless the area allowes it.
		Can now send (hopefully) valid uplink requests to BBBS systems.
		Removed some debug logging from un_attach, made one into a
		normal logmessage.
		The postemail and scanemail functions are changed so that
		Outlook email addresses are parsed so that we can reply via
		smtp.

	mbfile:
		The html index now uses html named character entities on the
		area names on the main index page.
		With html index creation if the convert program for the
		thumbnails failed, the html pages were wrong.
		The thumbnails were created from the 8.3 name but the url was
		created to the LFN. Depending on the settings of your apache
		server you would see the thumbnails or not.
		The check for wrong thumbnails changed from LFN to 8.3 names.

	mbindex:
		Fixed compiling pointlists where on the Boss line there is no
		last comma on the line.

	mbmsg:
		Fixed counter in log that should show the number of linked 
		messages.

	mbsebbs:
		The exec_nosuid function for doors now also has a extra small
		delay just like all other execute functions to prevent problems
		on fast machines.
		Added extra fflush in quickscan mail.
		When calling the external editor, the fromaddress if available
		is given to joe.

	mbuser:
		Fixed permissions.

	mbtask:
		Tried to call nodes during ZMH or during a Tyx window when mail
		was on hold.

	mbsetup:
		Changed nodes screens to have a separate uplink managers setup